# example_app_client_versions

./: .env-example  Dockerfile  alembic.ini  build-dependencies.txt  compose.yaml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 3831864a3638_.py
app/: deps.py  main.py
app/config/: async_database.py  sync_database.py
app/core/: abs_client.py  abs_repo.py
app/databases/: async_client.py  sync_client.py
app/domain/: models.py  schemas.py
app/repos/: async_repo.py  sync_repo.py
